# TxEditorCCTool

./: CMakeLists.txt  README.md  molokai.col  molokai.tpc
cc_include/: Color.hpp  Item.hpp  Sakura.hpp  TeraPad.hpp  TextEditor.hpp  better_map.hpp  ccio.hpp  ccx_parser.hpp  color_code.hpp  constants.hpp  current_path.hpp  enum_array.hpp  enum_item.hpp  fstream_encode.hpp  sbool.hpp
cc_src/: Color.cpp  Sakura.cpp  TeraPad.cpp  TextEditor.cpp  ccio.cpp  ccx_parser.cpp  current_path.cpp
src/: main.cpp
